package Lojas;


public interface CustoSeguranca {

    double custoSeguranca ();
}
